# experiments

./: .gitignore  README.md
agent-policy-redteam/: README.md  pipeline-flow.html
nemoguard-ADbenchmark/: README.md  pyproject.toml
nemoguard-ADbenchmark/library_additions/Context_manipulation/: context_bloat_actions.py  context_bloat_config_example.yml  context_bloat_flows.co
nemoguard-ADbenchmark/library_additions/Indirect_prompt_injection/files/: indirect_injection.yara  indirect_injection_flows.co  indirect_injection_flows.v2.co
nemoguard-ADbenchmark/results/: comparison_report.md
nemoguard-ADbenchmark/results/baseline/important_instructions/: summary.json
nemoguard-ADbenchmark/results/baseline/important_instructions/local/workspace/injection_task_0/none/: none.json
nemoguard-ADbenchmark/results/baseline/important_instructions/local/workspace/injection_task_1/none/: none.json
nemoguard-ADbenchmark/results/baseline/important_instructions/local/workspace/injection_task_2/none/: none.json
nemoguard-ADbenchmark/results/execution_rails/important_instructions/: summary.json
nemoguard-ADbenchmark/src/: report.py  runner.py
nemoguard-ADbenchmark/src/bridge/: message_converter.py  pipeline_element.py  tool_adapter.py
nemoguard-ADbenchmark/src/configs/baseline/: config.yml
nemoguard-ADbenchmark/src/configs/dialog_execution_rails/: config.yml  rails.co
nemoguard-ADbenchmark/src/configs/execution_rails/: actions.py  config.yml  rails.co
nemoguard-ADbenchmark/tests/: test_message_converter.py  test_report.py  test_smoke.py  test_tool_adapter.py
(+37 files in other folders)
